# guile-osc

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  hello-world.nw  osc.nw
support/automake/: noweb.am
support/noweb/: default-header.tex  doc-footer.tex  doc-header.tex
support/pkg-config/: Makefile.am  guile-noweb-autotools.pc.in  guile-osc.pc.in
support/scheme/: check.scm
